--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body{
 
 .body {
     width: 50%; 
+    height: 100vh;
     padding: 50px;
     margin: auto;
     border: 1px solid rgb(190, 189, 189);
