--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body{
 
 .body {
     width: 50%; 
-    height: 100vh;
+    height: 100%;
     padding: 50px;
     margin: auto;
     border: 1px solid rgb(190, 189, 189);
